Fixed admin sorting and view. Possibly fixed alignment on home page after logged in. Added admin link to nav-bar. Began fixing message chains

--- a/ngCultivAid/src/app/components/messaging/messaging.component.css
+++ b/ngCultivAid/src/app/components/messaging/messaging.component.css
@@ -55,6 +55,10 @@
   margin-bottom: 1rem;
 }
 
+.otherUserReply {
+  background-color: white !important;
+}
+
 /* #messageTableDiv {
   transform: translate(0px, 10rem);
   background-color: rgba(77, 175, 21, 0.8);
